--- a/index.html
+++ b/index.html
@@ -32,58 +32,63 @@
     </header>
 
     <main>
-        <div class="main-box">
-            <div class="main-cta-box">
-                <div class="div-folixil">
-                    <img class="main-folixil" src="./assets/img/folixil.png" alt="Imagem do pote de folíxil">
+        <div class="limitador">
+            <div class="main-box">
+                <div class="main-cta-box">
+                    <div class="div-folixil">
+                        <img class="main-folixil" src="./assets/img/folixil.png" alt="Imagem do pote de folíxil">
+                    </div>
+                    <a class="main-button" href="https://app.monetizze.com.br/r/ACV23757676">
+                        IR PARA O SITE OFICIAL
+                        <p style="font-weight: normal; font-size: 1.4rem; letter-spacing: .2rem; padding-top: 4px;">
+                            QUERO
+                            EXPERIMENTAR!</p>
+                    </a>
+                    <img class="main-img" src="./assets/img/confiavel.png" alt="">
+                    <img class="main-img" src="./assets/img/beneficios.png" alt="">
                 </div>
-                <a class="main-button" href="https://app.monetizze.com.br/r/ACV23757676">
-                    IR PARA O SITE OFICIAL
-                    <p style="font-weight: normal; font-size: 1.4rem; letter-spacing: .2rem; padding-top: 4px;">QUERO
-                        EXPERIMENTAR!</p>
-                </a>
-                <img class="main-img" src="./assets/img/confiavel.png" alt="">
-                <img class="main-img" src="./assets/img/beneficios.png" alt="">
-            </div>
-            <div class="main-text-box">
-                <h1 class="main-tb-title">Ative 9x mais folículos capilares nas entradas</h1>
-                <ul class="main-tb-ul">
-                    <li>
-                        <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
-                        Crescimento capilar 9x mais rápido
-                    </li>
-                    <li>
-                        <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
-                        Bloqueia ação de DHT da calvície aguda
-                    </li>
-                    <li>
-                        <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
-                        Ativa matriz folicular profunda anti-calvície
-                    </li>
-                    <li>
-                        <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
-                        Composto 100% natural sem efeitos colaterais
-                    </li>
-                    <li>
-                        <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
-                        Fórmula desenvolvida na República-Tcheca
-                    </li>
-                </ul>
+                <div class="main-text-box">
+                    <h1 class="main-tb-title">Ative 9x mais folículos capilares nas entradas</h1>
+                    <ul class="main-tb-ul">
+                        <li>
+                            <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
+                            Crescimento capilar 9x mais rápido
+                        </li>
+                        <li>
+                            <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
+                            Bloqueia ação de DHT da calvície aguda
+                        </li>
+                        <li>
+                            <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
+                            Ativa matriz folicular profunda anti-calvície
+                        </li>
+                        <li>
+                            <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
+                            Composto 100% natural sem efeitos colaterais
+                        </li>
+                        <li>
+                            <img class="check-icon" src="./assets/img/check-icon.svg" alt="Ícone de validação">
+                            Fórmula desenvolvida na República-Tcheca
+                        </li>
+                    </ul>
 
-                <div class="anvisa-box">
-                    <img class="anvisa-img" src="./assets/img/anvisa.png" alt="Logotipo da Anvisa">
-                    <h1 class="anvisa-title">
-                        <span>FOLIXIL</span> é <span>Aprovado</span> pela Anvisa nos termos da <span>RDC 240</span> de
-                        <span>26/07/2018</span>,
-                        sendo
-                        dispensado de
-                        registro, pois é avaliado como 100% Seguro para o consumo da população.
-                    </h1>
+                    <div class="anvisa-box">
+                        <img class="anvisa-img" src="./assets/img/anvisa.png" alt="Logotipo da Anvisa">
+                        <h1 class="anvisa-title">
+                            <span>FOLIXIL</span> é <span>Aprovado</span> pela Anvisa nos termos da <span>RDC 240</span>
+                            de
+                            <span>26/07/2018</span>,
+                            sendo
+                            dispensado de
+                            registro, pois é avaliado como 100% Seguro para o consumo da população.
+                        </h1>
+                    </div>
+                    <a class="main-button" href="https://app.monetizze.com.br/r/ACV23757676">IR PARA O SITE OFICIAL
+                        <p style="font-weight: normal; font-size: 1.4rem; letter-spacing: .2rem; padding-top: 4px;">
+                            QUERO
+                            EXPERIMENTAR!</p>
+                    </a>
                 </div>
-                <a class="main-button" href="https://app.monetizze.com.br/r/ACV23757676">IR PARA O SITE OFICIAL
-                    <p style="font-weight: normal; font-size: 1.4rem; letter-spacing: .2rem; padding-top: 4px;">QUERO
-                        EXPERIMENTAR!</p>
-                </a>
             </div>
         </div>
     </main>
